# compute-rust-opentelemetry-exporter

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: rust.yml
example/: .gitignore  Cargo.toml  README.md  fastly.toml
example/src/: main.rs
fastly-opentelemetry-exporter/: Cargo.toml
fastly-opentelemetry-exporter/src/: default_url.rs  error.rs  lib.rs  log_exporter.rs  log_exporter_builder.rs  metrics_exporter.rs  resource_builder.rs  root_span.rs  span_exporter.rs  span_exporter_builder.rs
