[workspace]
resolver = "2"
members = [
    "fastly-opentelemetry-exporter",
    "example",
]

[workspace.package]
authors = [
    "Eric Hodel <ehodel@fastly.com>",
    "Joe Shaw <joeshaw@fastly.com>",
]
edition = "2024"
homepage = "https://github.com/fastly/fastly-opentelemetry-exporter"
repository = "https://github.com/fastly/fastly-opentelemetry-exporter"
version = "0.1.0"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace.dependencies]
fastly = "0.11.13"
opentelemetry = { version = "0.30.0", default-features = false, features = [ "trace" ] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = [ "trace" ] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
