[workspace]
resolver = "2"
members = [
    "example",
    "fastly-opentelemetry-exporter",
]

[workspace.package]
authors = [
    "Eric Hodel <ehodel@fastly.com>",
    "Joe Shaw <joeshaw@fastly.com>",
]
edition = "2024"
homepage = "https://github.com/fastly/fastly-opentelemetry-exporter"
publish = false
repository = "https://github.com/fastly/fastly-opentelemetry-exporter"
version = "0.1.0"

[workspace.dependencies]
fastly = "0.11.5"
opentelemetry = { version = "0.31.0", default-features = false, features = [ "logs", "metrics", "trace" ] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [ "logs", "metrics", "trace" ] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
