[package]
name = "fastly-opentelemetry-tracing-example"
version = "0.1.0"
authors = []
edition = "2024"
publish = false

[dependencies]
fastly.workspace = true
fastly-opentelemetry-exporter = { path = "../fastly-opentelemetry-exporter/" }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-subscriber = "0.3.19"
tracing.workspace = true
tracing-opentelemetry.workspace = true
